- Fix page origin when printing in landscape (Alex Shvartzkop, #23860).
- Dramatically optimize adding many items to wxChoice (Ian McInerney, #23443).
- Improve and document wxGLCanvas::CreateSurface() (Dan Gudmundsson, #23366).
- Fix loading WebKit2 extension when using wxWebView (Scott Talbert, #23497).
- Fix editing cells without values in wxDataViewCtrl (#23523).
- Fix uninitialized wxKeyEvent::m_isRepeat (jolz, #23593).
- Improve best size computation of wxTextCtrl (Alex Shvartzkop, #23610).
- Fix missing borders for scrollable windows, e.g. wxListCtrl (#23236).
- Fix TAB navigation in wxPropertyGrid (Adrian Lopez, #23354).
- Fix GSource leak when using wxIdleEvent::RequestMore() (#23364).
- Allow using libwebkit2gtk-4.1 and libsoup-3.0 (Scott Talbert, #23630).
- Support Numpad Enter for ending wxListCtrl editing (Scott Talbert, #23762).

wxMSW:

- Fix (deprecated) build without Unicode support broken in 3.2.2 (#23516).
- Fix crash when using wxBitmapDataObject in wxDataObjectComposite (#23564).
- Fix setting locale for wxLANGUAGE_UKRAINIAN (Ulrich Telle, #23210).
- Don't reset custom wxToolBar background on system colour change (#23386).
- Fix wxUILocale::GetPreferredUILanguages() with OS < 10 (Brian Nixon, #23416).
- Fix building with LLVM clang (Sergey Khalyutn, Maarten Bent, #23464).
- Fix discrepancy between GDI and Direct2D in high DPI (Kumazuma, #23486).
- Fix wxTreeCtrl::ScrollTo() with hidden root item (#23534).
- Fix hang in wxFileDialog if COINIT_MULTITHREADED was used (#23578).
- Fix handling of RLE-compressed bitmaps (Brian Nixon, #23573).
- Fix wxWindow::GetTextExtent() with given font in high DPI (#23542).
- Fix drawing owner-drawn menu items with bitmaps (Jacob Gillespie, #23230).
- Improve ScrollTo() with wxDV_VARIABLE_LINE_HEIGHT (Jens Göpfert, #23102).
- Fix libraries names in Arch64 CMake build (Tobias Taschner, #23347).
- Fix using wxComboCtrl with AUI floating pane as parent (#23399).